# goatee

./: README.md  commintlint.config.js  docker-compose.yml
.github/worflows/: lint.yml
api/: .env.dist  Cargo.toml  Dockerfile
api/src/: db.rs  main.rs  server.rs
api/src/models/: auth.rs  mod.rs  user.rs
api/src/repositories/test/: mod.rs  routes.rs  test_repository.rs
api/src/repositories/user/: error_handler.rs  mod.rs  routes.rs  user_repository.rs
api/src/routes/: test.rs
client/: Dockerfile  package-lock.json  package.json
client/src/components/: HelloWorld.vue
