[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
serde = "1" # Used in the Map Data into Structs section
serde_json = "1.0" # Used to Map json into Data
bson = "2.1.0"
dotenv = "0.15"
mongodb = "2.2.2"
anyhow = "1.0"
once_cell = "1.12"
